Replaced ElasticSearch client with JEST
As the Lucene version used by Neo4j conflicted
First Integration-Tests work.

--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,10 @@
     </build>
 
     <dependencies>
-
         <dependency>
-            <groupId>org.elasticsearch</groupId>
-            <artifactId>elasticsearch</artifactId>
-            <version>1.5.1</version>
+            <groupId>io.searchbox</groupId>
+            <artifactId>jest</artifactId>
+            <version>0.1.5</version>
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
